# retro_game_engine

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  index.html  junit.xml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  documentation.yml  publish.yml  release-drafter.yml  release.yml  stale.yml
api/: index.html
api/core/: index.html
api/game_loop/: index.html
api/input/: index.html
api/sprite/: index.html
api/sprite_renderer/: index.html
api/vector2d/: index.html
api/window/: index.html
docs/: index.md  installation.md  requirements.txt
docs/api/: README.md  core.md  game_loop.md  index.md  input.md  sprite.md  sprite_renderer.md  vector2d.md  window.md
docs/guides/: best-practices.md  faq.md  getting_started.md  migration.md  performance.md  troubleshooting.md
docs/tutorials/: README.md  platformer.md
examples/: README.md
examples/audio_demo/: __init__.py  generate_audio.py  main.py
examples/audio_demo/src/: __init__.py
examples/basic_game_loop/: README.md  __init__.py  main.py
examples/basic_game_loop/src/: __init__.py
examples/basic_window/: main.py
examples/basic_window/src/: __init__.py
examples/input_test/: main.py
examples/input_test/src/: __init__.py
examples/platformer/: README.md  __init__.py  components.py  generate_sprites.py  main.py  systems.py
examples/platformer/src/: __init__.py
examples/scene_management/: main.py
examples/scene_management/src/: __init__.py
examples/sprite_test/: generate_assets.py  main.py
examples/sprite_test/src/: __init__.py
examples/tilemap_test/: main.py
examples/tilemap_test/assets/: create_tileset.py
examples/tilemap_test/src/: __init__.py
examples/ui_demo/: main.py
examples/ui_demo/src/: __init__.py
guides/best-practices/: index.html
guides/faq/: index.html
guides/getting_started/: index.html
guides/migration/: index.html
guides/performance/: index.html
guides/troubleshooting/: index.html
installation/: index.html
search/: search_index.json
src/core/: __init__.py  game_loop.py  input.py  scene.py  scene_manager.py
src/core/audio/: __init__.py  audio_clip.py  audio_manager.py
src/core/ecs/: component.py  entity.py
src/core/ecs/components/: sprite_renderer.py  transform.py
src/core/ui/: button.py  ui_element.py
tests/: __init__.py  conftest.py
tests/unit/core/: test_audio.py  test_game_loop.py  test_input.py  test_physics.py  test_scene.py  test_scene_manager.py  test_sprite.py  test_sprite_renderer.py  test_tilemap.py  test_window.py
tests/unit/core/audio/: __init__.py  test_audio_clip.py  test_audio_manager.py  test_utils.py
tests/unit/core/ecs/: test_components.py  test_entity.py  test_world.py
tests/unit/core/ui/: test_button.py  test_text.py  test_ui_element.py
tutorials/: index.html
tutorials/platformer/: index.html
