[tool.poetry]
name = "retro_game_engine"
version = "0.1.0"
description = "A lightweight, authentic 8-bit and 16-bit style game development framework"
authors = ["Ahmed Mohamed <ahmedmohamed200354@gmai.com>"]
readme = "README.md"
packages = [{include = "src"}]
license = "MIT"
homepage = "https://github.com/ahmed5145/retro_game_engine"
repository = "https://github.com/ahmed5145/retro_game_engine"
keywords = ["game", "engine", "retro", "pygame", "2d"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: pygame"
]

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"
numpy = "^1.26.3"
scipy = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"
