[tool.poetry]
name = "retro_game_engine"
version = "0.1.0"
description = "A lightweight, authentic 8-bit and 16-bit style game development framework"
authors = ["Ahmed Mohamed <ahmedmohamed200354@gmai.com>"]
readme = "README.md"
packages = [{include = "src"}]
license = "MIT"
homepage = "https://github.com/ahmed5145/retro_game_engine"
repository = "https://github.com/ahmed5145/retro_game_engine"
keywords = ["game", "engine", "retro", "pygame", "2d"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: pygame"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pygame = "^2.5.2"
numpy = "^1.26.3"
scipy = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["examples"]
skip_glob = ["examples/*"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = false
warn_unreachable = false
exclude = [
    'examples/.*',  # Exclude all example files
]
explicit_package_bases = true  # Fix module mapping issues
namespace_packages = true  # Support namespace packages

# Allow missing imports for certain modules
[[tool.mypy.overrides]]
module = ["scipy.*", "scipy", "pygame.*", "pygame"]
ignore_missing_imports = true

# More lenient settings for tests
[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["unreachable", "misc"]
warn_unreachable = false
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"

[tool.flake8]
max-line-length = 88  # Match black's line length
extend-ignore = [
    "E501",  # Line too long (handled by black)
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D200",  # One-line docstring should fit on one line with quotes
    "D202",  # No blank lines allowed after function docstring
    "D401",  # First line should be in imperative mood
    "D402",  # First line should not be the function's signature
    "F401",  # Imported but unused (let pylint handle this)
    "F811",  # Redefinition of unused name (let pylint handle this)
    "F841",  # Local variable name is assigned to but never used (let pylint handle this)
]
exclude = [
    "examples/*",
    ".git",
    "__pycache__",
    "build",
    "dist"
]
per-file-ignores = [
    "__init__.py:F401",  # Ignore unused imports in __init__.py files
    "tests/*:D,F841",    # Ignore docstring issues and unused variables in tests
]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "W0611",  # unused-import
    "E1101",  # no-member (for pygame attributes)
    "C0301",  # line-too-long
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0621",  # redefined-outer-name (for pytest fixtures)
]

[tool.pylint.format]
max-line-length = 88  # Match black's default

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "x", "y", "dx", "dy", "id", "fp", "dt"]

[tool.pylint.typecheck]
# List of module names for which member attributes should not be checked
ignored-modules = ["pygame"]
